# chatbot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_services.sh
backend/: app.py  bot.py
frontend/: chatbot_frontend.py
src/agents/: base_agent.py  learning_agent.py
src/api/: instace_db.py  main.py
src/db/: vector_store.py
src/ui/: api_client.py  app.py
